--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ nav form,
 .footer .watch {
     display: flex;
     justify-content: space-between;
-    aling-items: center;
+    align-items: center;
 }
 
 nav ul {
@@ -180,5 +180,132 @@ header::after {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-
 }
+
+.body .fas {
+    color: #fcc204;
+}
+.body img {
+    width: 45em;
+    transform: rotate(-25deg);
+    filter: drop-shadow(
+        30px 45px 40px #161616
+    );
+}
+
+.footer {
+    max-width: 1250px;
+    margin: 0 auto;
+    padding: 0 3em;
+    position: relative;
+}
+.footer a {
+    margin: 0 0.4em;
+    font-size: 1.2em;
+}
+
+.footer .play-icon {
+    border: 3px #fff solid;
+    border-radius: 50%;
+    width: 3em;
+    height: 3em;
+    text-align: center;
+    line-height: 3em;
+    font-size: 1.3em;
+    box-shadow: 0px 0px 15px #fff;
+    margin-right: 0.8em;
+    transition: 0.3s;
+    cursor: pointer;
+}
+.footer .play-icon:hover {
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 0px 0px transparent;
+}
+@media screen and (max-width: 1000px) {
+    nav .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+    nav .container > div {
+        grid-template-columns: 1fr;
+    }
+    nav .menu {
+        flex-direction: column;
+        align-items: flex-start;
+        height: 0;
+        overflow: hidden;
+        transition: 0.7s;
+    }
+    nav ul li {
+        display: block;
+        margin: 0.5em 0;
+    }
+    nav ul li:nth-child(1) {
+        margin-top: 1.5em;  
+    }
+    nav .container .menu-btn {
+        display: inline-block;
+        font-size: 1.4em;
+        cursor: pointer;
+    }
+    nav .container .nav-toggle {
+        height: 16em;
+    }
+}
+
+@media screen and (max-width: 1210px) {
+   nav {
+    margin-bottom: 2em;
+   } 
+   .body {
+    grid-template-columns: 1fr;
+    text-align: center;
+   }
+   header::before {
+    display: none;
+   }
+   header {
+    height: initial;
+   }
+   .body > div:nth-child(2) {
+    justify-content: center;
+    margin: 3em 0;
+   }
+   body img {
+    transform: none;
+   }
+   .body p {
+    margin: 2em auto 3em auto;
+   }
+}
+
+@media screen and (max-width: 800px) {
+    html {
+        font-size: 14px;
+    }
+    .body img {
+        width: 90%;
+    }
+    .footer {
+        flex-direction: column;
+        margin-top: 3em;
+    }
+    .watch {
+        margin: 2em 0;
+        flex-direction: column;
+    }
+    .footer .play-icon {
+        margin: 0;
+    }
+}
+
+@media screen and (max-height: 650px) {
+    header {
+        height: initial;
+    }
+    .footer {
+        margin: 4em auto 2em auto;
+    }
+}
+
